syntax = "proto3";

package adminserver.api.v1;

option go_package = "server/admin-server/api/v1;v1";



import "google/api/annotations.proto";
import "validate/validate.proto";

service Develop {
  // 停止notebook
  rpc StopNotebook (StopNotebookRequest) returns (StopNotebookReply) {
    option (google.api.http) = {
      post: "/v1/developmanage/notebook/{id}/stop"
    };
  };
  // 查询notebook列表
  rpc ListNotebook (ListNotebookRequest) returns (ListNotebookReply) {
    option (google.api.http) = {
      get: "/v1/developmanage/notebook"
    };
  };
}

message StopNotebookRequest {
  string id = 1[(validate.rules).string = {min_len: 1}];
}

message StopNotebookReply {
  string id = 1;
}

message ListNotebookRequest {
  int64 pageIndex = 1[(validate.rules).int64 = {gte: 1}];
  int64 pageSize = 2[(validate.rules).int64 = {gte: 1, lt: 100}];
  string sortBy = 3;
  string orderBy = 4[(validate.rules).string = {in: ["", "asc", "desc"]}];
  int64 createdAtGte = 5;
  int64 createdAtLt = 6;
  string status = 7;
  string searchKey = 8; //name等模糊查找
}

message Notebook {
  int64 createdAt = 1;
  int64 updatedAt = 2;
  string id = 3;
  string userId = 4;
  string workspaceId = 5;
  string name = 6;
  string desc = 7;
  string imageId = 8;
  string imageName = 9;
  string algorithmId = 10;
  string algorithmVersion = 11;
  string algorithmName = 12;
  string resourceSpecId = 13;
  string resourceSpecName = 14;
  string status = 15;
  string url = 16;
  string userName = 17;
  string workspaceName = 18;
  string datasetId = 19;
  string datasetVersion = 20;
  string datasetName = 21;
  uint32 resourceSpecPrice = 22;
  string imageVersion = 23;
}

message ListNotebookReply {
  int64 totalSize = 1;
  repeated Notebook notebooks = 2;
}